objects/LLC_BI__Pricing_Option__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__APR__c</fullName>
        <description>This percent field is optional and is calculated by Sherman during the Retail Loan Workflow. It populates with the Annual Percentage Rate.</description>
        <label>APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adjustment_Frequency__c</fullName>
        <description>This field indicates the adjustment frequency for and adjustable rate loan in months.</description>
        <label>Adjustment Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortization_Notes__c</fullName>
        <description>This field indicates any notes about the Amortization Schedule (e.g. interest only periods, non-linear amortization, etc.)</description>
        <label>Amortization Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortization__c</fullName>
        <description>This field indicates the number of months over which the loan is amortized</description>
        <label>Amortization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field indicates the amount of the loan</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Fees__c</fullName>
        <description>This field indicates the annual fees associated with the loan</description>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Applied_Date__c</fullName>
        <description>Date that this pricing option was applied to a loan.</description>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Assets__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Assets</description>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Yield__c</fullName>
        <description>This field indicates the average interest income divided by the average outstanding assets</description>
        <formula>IF( LLC_BI__Average_Assets__c &gt; 0,  LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CalculatedEffectiveLoanToValue__c</fullName>
        <description>This field indicates the PrecisionLender Scenario Financial Statement Loan Effective LTV.</description>
        <label>Effective LTV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Caps_Floors_Summary__c</fullName>
        <description>This field is a simple text summary of any Caps &amp; Floors. Only relevant for Floating or Adjustable Loans</description>
        <label>Caps &amp; Floors Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Changes_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the changes have been approved.</description>
        <label>Changes Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Competitor_Name__c</fullName>
        <description>Name of the competitor for competitive scenario</description>
        <label>Competitor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DTI__c</fullName>
        <description>This percent field auto-populates with debt to income (DTI) ratio after the monthly payment is calculated.</description>
        <label>Debt to Income Ratio</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Life__c</fullName>
        <description>This field indicates the expected life of the loan in months.</description>
        <label>Expected Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fees__c</fullName>
        <description>This currency field is optional. It indicates the total amount of fees financed associated with this pricing option.</description>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Period__c</fullName>
        <description>This field indicates the initial fixed period for an Adjustable Rate Loan, as such it is only applicable when the Rate Type is Adjustable.</description>
        <label>Fixed Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Fixed_Rate_Lock_Summary__c</fullName>
        <description>This field indicates the Summary of Rate or Spreadlock.</description>
        <label>Fixed Rate Lock Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Value__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix.</description>
        <inlineHelpText>This system-populated field displays the current index value percentage.</inlineHelpText>
        <label>Index Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index__c</fullName>
        <description>This field indicates the Index Name for Floating and Adjustable Rate loans (e.g. Prime, 1M LIBOR, etc.)</description>
        <label>Index</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees_Currency__c</fullName>
        <description>This field indicates the fixed dollar portion of the initial fees.</description>
        <label>Initial Fees ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees_Text__c</fullName>
        <description>This field indicates the initial fees related to the loan</description>
        <formula>TEXT( ROUND( LLC_BI__Initial_Fees__c * 100,2)) &amp; &quot;% + &quot; &amp;

			&quot;$&quot; &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000000,
			TEXT(FLOOR( LLC_BI__Initial_Fees_Currency__c / 1000000)) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000,
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c/ 1000)), 3) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Fees__c</fullName>
        <description>This field indicates the percentage portion of the initial fees.</description>
        <label>Initial Fees (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate__c</fullName>
        <description>This field indicates the initial interest rate of the loan</description>
        <label>Initial Rate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Options__c</fullName>
        <description>This field is a summary of the Interest Options within PrecisionLender (e.g. Payment Frequency, Interest Rate Basis, etc.)</description>
        <label>Interest Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This system-populated field displays the percentage that the system adds to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Pipeline_Scenario__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this scenario be the one to represent the Opportunity in Pipeline calculations?</description>
        <label>Is Pipeline Scenario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Renewal_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the loan is a renewal loan</description>
        <label>Is Renewal Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Amount__c</fullName>
        <description>This currency field is optional. It represents the amount of the loan for this pricing option.</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Average Balance</description>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Commitment</description>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Gross_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Gross Funding</description>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Net_Commitment__c</fullName>
        <description>This field indicates the PrecisionLender Scenario Financial Statement Target ROA.</description>
        <label>Loan Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Net_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Funding.</description>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This lookup field auto-populates to reference the loan to which this pricing option relates.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Pricing Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MAPR__c</fullName>
        <description>The system automatically populates this optional field with a Military APR Sherman calculates when the MLA Status flag is set to true.</description>
        <inlineHelpText>The system automatically populates this optional field with a Military APR Sherman calculates when the MLA Status flag is set to true.</inlineHelpText>
        <label>MAPR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MLA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</description>
        <inlineHelpText>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</inlineHelpText>
        <label>MLA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity__c</fullName>
        <description>This field indicates the contract maturity of the loan.</description>
        <label>Maturity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indiates the memo linked to the PrecisionLender pricing scenario</description>
        <label>Memo</label>
        <referenceTo>LLC_BI__Credit_Memo_Modifcation__c</referenceTo>
        <relationshipLabel>Pricing_Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Payment__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the monthly payment associated to the product for this pricing option.</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income.</description>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets</description>
        <formula>IF( LLC_BI__Average_Assets__c &gt; 0, LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense.</description>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pricing_Options</relationshipLabel>
        <relationshipName>Pricing_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Type__c</fullName>
        <description>This field indicates the payment type of the loan</description>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepayment_Option__c</fullName>
        <description>This field indicates if there is a prepayment option</description>
        <label>Prepayment Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Name__c</fullName>
        <description>This field indicates the name of the product in the pricing scenario</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Ceiling__c</fullName>
        <description>The system automatically populates this optional percentage field with information from the Pricing Matrix to specify the maximum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the maximum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Ceiling</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Floor__c</fullName>
        <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
        <inlineHelpText>This system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
        <label>Rate Floor</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Type__c</fullName>
        <description>This field indicates the Rate Type (Fixed, Floating or Adjustable)</description>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate__c</fullName>
        <description>This percent field auto-populates after pricing option calculations. It indicates the interest rate for this pricing option.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Repricing_Duration__c</fullName>
        <description>This field indicates the Repricing duration based on loan type. Floating (Adjustment Frequency), Fixed (Maturity), Adjustable (Fixed Period).</description>
        <label>Repricing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating__c</fullName>
        <description>This field indicates the risk rating associated with the borrower</description>
        <label>Risk Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Description__c</fullName>
        <description>PrecisionLender Scenario Description</description>
        <label>Scenario Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Name__c</fullName>
        <description>Name of the PrecisionLender Scenario</description>
        <label>Scenario Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Type__c</fullName>
        <description>This field indicate the PrecisionLender Scenario Type (Alternative or Competitive)</description>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Scenario_Weight__c</fullName>
        <description>This field indicates the PrecisionLender Scenario Weight.</description>
        <label>Scenario Weight</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Short_Code__c</fullName>
        <description>The short code is generated in PrecisionLender when a loan is priced. This code serves as the roundtrip Id which follows the loan&apos;s journey through pricing, booking and then back to PL through the RA process.</description>
        <label>Short Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread__c</fullName>
        <description>This field indicates the Spread related to the Index for pricing Floating and Adjustable loans.</description>
        <label>Spread</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_Net_Income__c</fullName>
        <description>This field indicates the PrecisionLender Scenario Financial Statement Target Net Income.</description>
        <label>Target Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROA</description>
        <label>Target ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Exempt_Status__c</fullName>
        <description>This field indicates the Tax Exempt status of the loan</description>
        <label>Tax Exempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Rate__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix with the interest rate initially applied to the loan. The rate is in effect for a given number of payments.</description>
        <inlineHelpText>This system-populated field displays the interest rate initially applied to the loan.</inlineHelpText>
        <label>Teaser Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Teaser_Term__c</fullName>
        <description>The system automatically populates this optional field using values from the Pricing Matrix to indicate the number of payments the teaser rate is in effect.</description>
        <inlineHelpText>This system-populated field displays the number of payments the teaser rate is in effect.</inlineHelpText>
        <label>Teaser Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term__c</fullName>
        <description>This number field auto-populates after pricing option calculations. It indicates the duration of term of the product for this pricing option.</description>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Cost__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the total cost over the life of the product for this pricing option.</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Interest__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the total interest paid over the life of the product for this pricing option.</description>
        <label>Total Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Principal__c</fullName>
        <description>This currency field auto-populates after pricing option calculations. It indicates the total principal amount over the life of the product, including fees.</description>
        <label>Total Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PrecisionLender record lookup key.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pricing Option</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>